[package]
name = "honeycomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.18", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.11", features = ["metrics", "tls", "tonic"] }
opentelemetry-semantic-conventions = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tracing-opentelemetry = "0.18"
tokio = { version = "1.14", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tonic = "0.8"
tonic-web = "0.4"
url = "2.2"